syntax = "proto3";

option csharp_namespace = "PaymentRPC";

package payment;

service Payment {
  rpc ProcessPayment (PaymentItem) returns (PaymentReply);
}

message PaymentItem {
  string amount = 1;
  string method = 2;
}

message PaymentReply {
  string processingTime = 1;
}
